Fixing fonts on mobiles

--- a/css/styles.css
+++ b/css/styles.css
@@ -951,4 +951,7 @@ footer {
 	.simpel-content {
 	    margin-top: 25rem;
 	}   
+    .home .section-title {
+        font-size: 5rem;
+    }
 }
